--- a/index.html
+++ b/index.html
@@ -56,14 +56,22 @@
 					<div class="span6">
 <strong><pre>
 <center><h4>Mekanisme</h4></center>
-· Periode promo INJECT DATA GRATIS berlangsung dari 24 Juni 2016 – 1 Juli 2016
-· Setiap nomor Handphone hanya bisa mendapatkan pulsa Paket sebanyak 2 kali 
-· Hadiah langsung pulsa akan ditambahkan maksimal dalam 1x24 jam. Konsumen akan menerima SMS dari kami mengkonfirmasi bahwa
- KodeUnik telah dikirimkan dan pulsa akan masuk dalam 24jam. Pengguna Telkomsel dan Indosat akan menerima SMS notifikasi dari
- masing-masing provider-nya ketika pulsa sudah berhasil di top-up. Kecuali pengguna XL. Pastikan untuk pengguna XL dapat
+· Periode promo INJECT DATA GRATIS berlangsung dari
+  24 Juni 2016 – 1 Juli 2016
+· Setiap nomor Handphone hanya bisa mendapatkan
+  pulsa Paket sebanyak 2 kali 
+· Hadiah langsung pulsa akan ditambahkan maksimal 
+  dalam 1x24 jam. Konsumen akan menerima SMS dari kami mengkonfirmasi bahwa
+ KodeUnik telah dikirimkan dan pulsa akan masuk dalam 
+ 24jam. Pengguna Telkomsel dan Indosat akan menerima SMS notifikasi dari
+ masing-masing provider-nya ketika pulsa sudah berhasil 
+ di top-up. Kecuali pengguna XL. Pastikan untuk pengguna XL dapat
  melakukan pengecekan pulsa sebelum dan sesudah penukaran kode unik.
-· Penyelenggara berhak mendiskualifikasi peserta yang tidak memenuhi salah satu atau seluruh syarat dan ketentuan promo ini.
-· Penyelenggara berhak memodifikasi/ merubah ketentuan termasuk namun tidak terbatas pada periode promo dan hal lainnya yang terdapat dalam peraturan resmi.
+· Penyelenggara berhak mendiskualifikasi peserta yang tidak 
+memenuhi salah satu atau seluruh syarat dan ketentuan promo ini.
+· Penyelenggara berhak memodifikasi/ merubah ketentuan 
+termasuk namun tidak terbatas pada periode promo dan hal
+lainnya yang terdapat dalam peraturan resmi.
     </pre></div></strong>
 				</div>
 				</div><br>
