--- a/index.html
+++ b/index.html
@@ -61,17 +61,23 @@
 · Setiap nomor Handphone hanya bisa mendapatkan
   pulsa Paket sebanyak 2 kali 
 · Hadiah langsung pulsa akan ditambahkan maksimal 
-  dalam 1x24 jam. Konsumen akan menerima SMS dari kami mengkonfirmasi bahwa
- KodeUnik telah dikirimkan dan pulsa akan masuk dalam 
- 24jam. Pengguna Telkomsel dan Indosat akan menerima SMS notifikasi dari
- masing-masing provider-nya ketika pulsa sudah berhasil 
- di top-up. Kecuali pengguna XL. Pastikan untuk pengguna XL dapat
- melakukan pengecekan pulsa sebelum dan sesudah penukaran kode unik.
-· Penyelenggara berhak mendiskualifikasi peserta yang tidak 
-memenuhi salah satu atau seluruh syarat dan ketentuan promo ini.
-· Penyelenggara berhak memodifikasi/ merubah ketentuan 
-termasuk namun tidak terbatas pada periode promo dan hal
-lainnya yang terdapat dalam peraturan resmi.
+  dalam 1x24 jam. Konsumen akan menerima SMS dari
+  kami mengkonfirmasi bahwa
+  KodeUnik telah dikirimkan dan pulsa akan masuk 
+  dalam 24jam. Pengguna Telkomsel dan Indosat
+  akan menerima SMS notifikasi dari
+  masing-masing provider-nya ketika pulsa sudah
+  berhasil di top-up. Kecuali pengguna XL. 
+  Pastikan untuk pengguna XL dapat
+  melakukan pengecekan pulsa sebelum dan sesudah 
+  penukaran kode unik.
+· Penyelenggara berhak mendiskualifikasi peserta 
+  yang tidak memenuhi salah satu atau seluruh 
+  syarat dan ketentuan promo ini.
+· Penyelenggara berhak memodifikasi/ merubah
+  ketentuan termasuk namun tidak terbatas pada 
+  periode promo dan hal lainnya yang terdapat 
+  dalam peraturan resmi.
     </pre></div></strong>
 				</div>
 				</div><br>
